src/objects/CBPeriod__c.object
<CustomObject>
    <fields>
        <fullName>BYName__c</fullName>
        <formula>CBBudgetYear__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BY Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBBudgetYearSet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Budget Year Set</label>
        <referenceTo>CBBudgetYear__c</referenceTo>
        <relationshipLabel>CB Periods (CB Budget Year Set)</relationshipLabel>
        <relationshipName>CBSetPeriods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBBudgetYear__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CB Budget Year</label>
        <referenceTo>CBBudgetYear__c</referenceTo>
        <relationshipLabel>CB Periods</relationshipLabel>
        <relationshipName>CBPeriods</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <label>End</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>CB Period</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ExtId__c</columns>
        <columns>NAME</columns>
        <columns>CBBudgetYear__c</columns>
        <columns>CBBudgetYearSet__c</columns>
        <columns>Start__c</columns>
        <columns>End__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CB Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CheckPeriodStartEndDiapasonIsInsideBY</fullName>
        <active>false</active>
        <errorConditionFormula>OR(CBBudgetYear__r.End__c &lt; End__c,CBBudgetYear__r.Start__c &gt; Start__c)</errorConditionFormula>
        <errorMessage>Selected period start/end is outside of the Budget Year Period</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NameUniquenessCheck</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
  CONTAINS(
      VLOOKUP( 
        $ObjectType.CBPeriod__c.Fields.Name , 
        $ObjectType.CBPeriod__c.Fields.Name, Name
      ), 
      Name
    ), 
  OR(
      ISNEW(), ISCHANGED(Name)
    ) 
  )</errorConditionFormula>
        <errorMessage>You cannot use an existing name</errorMessage>
    </validationRules>
</CustomObject>